# rsact

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  EVOLUTION.md  README.md  index.html  index.json  rustc-ice-2024-08-24T21_38_31-94589.txt  rustc-ice-2024-08-24T21_39_41-96544.txt  rustc-ice-2024-09-30T18_16_36-63847.txt  rustc-ice-2024-09-30T18_16_36-63848.txt  rustfmt.toml
.githooks/: post-commit
.github/workflows/: ci.yml  metrics.yml  site.yml
benches/: reactivity.rs
docs/: features.md
docs/plans/: 2026-07-05-rsact-evolution-roadmap.md  2026-07-08-0.9e-backfill-and-trend-viewer-design.md  2026-07-08-ws3-scopes-page-disposal.md  2026-07-08-ws9b-design.md  2026-07-09-ws13-views-as-builders-analysis.md  2026-07-09-ws13.1-builder-widget-split-spec.md  2026-07-09-ws13.2-builder-widget-split-prototype-plan.md  2026-07-09-ws13.2-prototype-findings.md  2026-07-09-ws4.0-inline-inert-analysis.md  2026-07-09-ws4.4-zero-source-probes-investigation.md  2026-07-13-ws13.4-fleet-conversion-plan.md  2026-07-13-ws13.4-notes.md  (+1 more)
examples/: flex.rs  sandbox.rs
metrics/: README.md
metrics-probe/: Cargo.toml
metrics-probe/src/: alloc.rs  benches.rs  html.rs  index.rs  main.rs  scenarios.rs  sizes.rs  snapshot.rs
metrics-probe/viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
metrics-probe/viewer/src/: App.test.js  App.vue  main.js
metrics-probe/viewer/src/components/: MetricTable.vue  TrendChart.vue
metrics-probe/viewer/src/lib/: chart.js  chart.test.js  sample.js  series.js  series.test.js
rsact-core/: Cargo.toml
rsact-core/src/: callback.rs  (+12 more)
rsact-encoder/: Cargo.toml  README.md
rsact-encoder/examples/: encoder_keyboard.rs
rsact-encoder/src/: lib.rs
rsact-encoder/src/widget/: encoder_keyboard.rs  mod.rs  mono_text_input.rs  select_keyboard.rs
rsact-icons/: .gitignore  Cargo.toml  README.md
rsact-icons/src/: lib.rs
rsact-macros/: Cargo.toml  README.md
rsact-reactive/: Cargo.toml  README.md  graph.md
rsact-reactive/benches/: allocations.rs  reactivity.rs
rsact-reactive/examples/: mem-overhead.rs
rsact-reactive/src/: alloc_probe.rs  async_rt.rs  callback.rs  composables.rs  computed.rs  cow.rs  debug.rs  eco.rs  effect.rs  inert.rs  leak.rs  lib.rs  macros.rs  maybe.rs  maybe_reactive.rs  memo.rs  memo_chain.rs  mutex.rs  observer.rs  probe.rs  read.rs  resource.rs  runtime.rs  scope.rs  signal.rs  storage.rs  stored.rs  thread_local.rs  trigger.rs  versioned.rs  write.rs
rsact-reactive/src/maybe/: maybe_reactive.rs  maybe_signal.rs  mod.rs
rsact-render/: Cargo.toml
rsact-render/src/: color.rs  layer.rs  lib.rs  path.rs  renderer.rs  tiny_skia.rs
rsact-render/src/eg/: alpha.rs  color.rs  framebuf.rs  image.rs  mod.rs  output.rs  renderer.rs
rsact-render/src/eg/primitives/: arc.rs  circle.rs  ellipse.rs  line.rs  mod.rs  polygon.rs  rounded_rect.rs  sector.rs
rsact-render/src/geometry/: anchor.rs  angle.rs  axis.rs  block_model.rs  border.rs  corner_radii.rs  mod.rs  point.rs  rect.rs  size.rs  vector.rs
rsact-render/src/image/: mod.rs  storage.rs
rsact-render/src/output/: mod.rs  pixel.rs
rsact-render/src/primitives/: arc.rs  block.rs  circle.rs  ellipse.rs  line.rs  mod.rs  polygon.rs  rounded_rect.rs  sector.rs
rsact-render/src/style/: block.rs  mod.rs
rsact-render/src/tiny_skia/: color.rs  geometry.rs  mod.rs  path.rs
rsact-tiny-icons/: Cargo.toml  EVOLUTION.md  README.md
rsact-ui/: .gitignore  Cargo.toml  README.md  graph.md  graph.mmd  mermaid.json
rsact-ui/benches/: layout.rs  many_edges.rs
rsact-ui/examples/: 3d_printer.rs  animation.rs  flex.rs  icons.rs  label.rs  mem_usage_display_240_240.rs  monochrome_oled_3d_printer.rs  paw-zero.rs  paw_zero.rs  primitives_aa.rs  sandbox.rs  scrollable.rs  tiny_skia.rs  widget_gallery.rs
rsact-ui/src/: axis.rs  block.rs  el.rs  event.rs  font.rs  layout.rs  lib.rs  padding.rs  size.rs  test_support.rs  ui.rs  utils.rs  value.rs  widget.rs
rsact-ui/src/anim/: easing.rs  mod.rs
rsact-ui/src/eg/: alpha.rs  color.rs  framebuf.rs  mod.rs  renderer.rs  ui.rs
rsact-ui/src/eg/primitives/: arc.rs  circle.rs  ellipse.rs  line.rs  polygon.rs  rounded_rect.rs  sector.rs
rsact-ui/src/el/: arena.rs  build.rs  ctx.rs  dirty.rs  event.rs  flags.rs  mod.rs  render.rs  state.rs  update.rs  view.rs
rsact-ui/src/event/: dev.rs  message.rs  mod.rs  select.rs  simulator.rs
rsact-ui/src/font/: fixed.rs  measure.rs  mod.rs
rsact-ui/src/geometry/: angle.rs  axis.rs  mod.rs  point.rs  size.rs  vector.rs
rsact-ui/src/layout/: axis.rs  block_model.rs  box_model.rs  counters.rs  flex.rs  grid.rs  length.rs  limits.rs  mod.rs  model.rs  node.rs  padding.rs  size.rs  tree.rs
rsact-ui/src/page/: dev.rs  id.rs  mod.rs
rsact-ui/src/render/: alpha.rs  arc.rs  buffer.rs  canvas.rs  color.rs  draw_target.rs  framebuf.rs  line.rs  mod.rs  path.rs  polygon.rs  tiny_skia.rs
rsact-ui/src/render/primitives/: arc.rs  circle.rs  ellipse.rs  line.rs  mod.rs  polygon.rs  rect.rs  rounded_rect.rs  sector.rs
rsact-ui/src/style/: accent.rs  block.rs  cascad.rs  mod.rs  primary_gray.rs  stylist.rs  text.rs  theme.rs
rsact-ui/src/style/theme/: binary_color.rs  mod.rs  rgb.rs
rsact-ui/src/widget/: bar.rs  button.rs  canvas.rs  checkbox.rs  combinators.rs  container.rs  ctx.rs  dynamic.rs  edge.rs  flex.rs  icon.rs  image.rs  knob.rs  label.rs  mod.rs  mono_text.rs  scrollable.rs  select.rs  show.rs  slider.rs  space.rs  text.rs
rsact-ui/src/widgets/: button.rs  checkbox.rs  container.rs  edge.rs  flex.rs  icon.rs  image.rs  keyed.rs  mod.rs  mono_text.rs  scrollable.rs  select.rs  slider.rs  space.rs
rsact-widgets/: Cargo.toml  README.md
scripts/: ci-backfill.sh  ci-metrics.sh  ci-powerset.sh  ci-size-probe-check.sh  ci-test.sh
site/: .npmrc  README.md  index.md  package-lock.json  package.json  roadmap.md  tsconfig.json  vitest.config.ts
size-probe/: Cargo.toml  build.rs  memory.x
size-probe/src/: lib.rs
src/: callback.rs  composables.rs  effect.rs  lib.rs  main.rs  operator.rs  reactive.rs  runtime.rs  signal.rs  storage.rs  vec.rs
(+49 files in other folders)
