[package]
edition = "2021"
name = "rsact"
version = "0.1.0"

[dependencies]
# rsact-reactive = {path = "./rsact-reactive", features = ["single-thread"]}
# rsact-encoder = {path = "./rsact-encoder"}
rsact-ui = {path = "./rsact-ui"}

[workspace]
authors = ["hazer-hazer"]
exclude = ["examples"]
license = "MIT"
members = [
  "rsact-ui",
  "rsact-reactive", # "rsact-encoder",
  "rsact-icons",
  "rsact-widgets",
  "rsact-macros",
]
repository = "https://github.com/hazer-hazer/rsact"
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# rsact-encoder = {path = "./rsact-encoder", default-features = false}
rsact-icons = {path = "./rsact-icons", default-features = false}
rsact-macros = {path = "./rsact-macros", default-features = false}
rsact-reactive = {path = "./rsact-reactive", default-features = false}
rsact-ui = {path = "./rsact-ui", default-features = false}
# rsact-widgets = {path = "./rsact-widgets", default-features = false}

# [profile.dev]
# opt-level = 0
# debug = "full"

# [profile.example]
# inherits = "dev"
# opt-level = 3
# debug = "full"

[features]
default = []
single-thread = ["rsact-ui/single-thread"]
std = ["rsact-ui/std"]

# [profile.sandbox]
# inherits = "dev"
# opt-level = 3

# [profile.dev.package."embedded-graphics-simulator"]
# opt-level = 3

# [profile.test.package."embedded-graphics-simulator"]
# opt-level = 3
