[package]
authors.workspace = true
edition.workspace = true
name = "rsact"
version.workspace = true

[dependencies]
# rsact-reactive = {path = "./rsact-reactive", features = ["single-thread"]}
# rsact-encoder = {path = "./rsact-encoder"}
# default-features = false so the root `micromath` passthrough isn't forced to
# coexist with rsact-ui's `libm` default (which would trip the mutual-exclusion).
# The facade re-picks `libm` as its own default below. NOTE: the facade still
# forwards no render-backend/font-provider features, so a standalone `-p rsact`
# build can't produce a working app yet — that's the deferred WS12.5 item.
rsact-ui = { path = "./rsact-ui", default-features = false }

[workspace]
# size-probe: no_std/no_main cortex-m binaries for WS0.3 Layer-2 section sizes.
# Excluded so host `cargo build --workspace` / `cargo hack --all` never try them;
# metrics-probe builds them per-target via `--manifest-path`.
exclude = ["examples", "size-probe"]
members = [
  "rsact-ui",
  "rsact-reactive", # "rsact-encoder",
  "rsact-tiny-icons",    # "rsact-widgets",
  "rsact-macros",
  "rsact-render",
  "metrics-probe",
]
resolver = "3"

[workspace.package]
authors = ["hazer-hazer"]
edition = "2024"
license = "MIT"
repository = "https://github.com/hazer-hazer/rsact"
version = "0.1.0"

[workspace.dependencies]
# rsact-encoder = {path = "./rsact-encoder", }
# default-features = false (9a.2): rsact-tiny-icons's default is
# `["common", "all-sizes"]`; disabling it here lets rsact-ui keep `common` but
# select icon sizes à la carte (a member can't override an inherited
# default-features to false, so it must be set on the workspace dep).
rsact-tiny-icons = { path = "./rsact-tiny-icons", default-features = false }
rsact-macros = { path = "./rsact-macros" }
rsact-reactive = { path = "./rsact-reactive" }
rsact-ui = { path = "./rsact-ui" }
# default-features = false: consumers (rsact-ui) pick the math backend via their
# own libm/micromath passthrough, so the mutually-exclusive default doesn't leak.
rsact-render = { path = "./rsact-render", default-features = false }
# rsact-widgets = {path = "./rsact-widgets", }

bitflags = { version = "2.11.1" }
defmt = { version = "0.3.8" }
derivative = { version = "2.2.0", default-features = false, features = [
  "use_core",
] }
# defmt is NOT forced here — it pulled a second defmt (1.x) into every
# embedded-graphics build. It is opt-in and forwarded through each crate's
# `defmt` feature (`embedded-graphics?/defmt`).
embedded-graphics = { version = "0.8.1" }
embedded-graphics-core = { version = "0.4.0" }
embedded-graphics-simulator = { version = "0.8.0" }
embedded-text = "0.7.2"
embedded-time = { version = "0.12.1" }
log = { version = "0.4.30", default-features = false, features = [] }
micromath = { version = "2.1.0", features = ["num-traits"] }
num = { version = "0.4.3", default-features = false, features = ["libm"] }
# Portable atomics: native instructions on thumbv7m+, and on no-CAS targets
# (thumbv6m) the *end product* selects the fallback — either the
# `critical-section` feature on its own portable-atomic dep or
# `--cfg portable_atomic_unsafe_assume_single_core` in RUSTFLAGS. No rsact
# feature wiring; see the thumbv6m note in the README.
portable-atomic = { version = "1", default-features = false }
# Float-method trait for the no_std `libm` math backend of rsact-render. The
# `libm` feature is forwarded per-crate (not enabled here), so std builds keep
# using std math; `default-features = false` keeps num-traits off std.
num-traits = { version = "0.2.19", default-features = false }
libm = { version = "0.2.16" }
replace_with = { version = "0.1.7", default-features = false }
slotmap = { version = "1.0.7", default-features = false }
tinyvec = { version = "1.9.0", features = ["alloc"] }
u8g2-fonts = "0.8.0"
env_logger = "0.11.10"
cap = "0.1.2"
tiny-skia = { version = "0.12.0", default-features = false, features = [
  "simd",
] }
bytemuck = { version = "1.25.0" }

[workspace.lints]

[profile.dev]
debug = "full"
opt-level = 0

[profile.example]
debug = "full"
inherits = "dev"
opt-level = 3

[features]
default = ["libm"]
defmt = ["rsact-ui/defmt"]
simulator = ["rsact-ui/simulator"]
single-thread = ["rsact-ui/single-thread"]
unsafe-single-thread = ["rsact-ui/unsafe-single-thread"]
std = ["rsact-ui/std"]
# no_std f32 math backend passthrough (libm is rsact-ui's default).
libm = ["rsact-ui/libm"]
micromath = ["rsact-ui/micromath"]

# [profile.sandbox]
# inherits = "dev"
# opt-level = 3

# [profile.dev.package."embedded-graphics-simulator"]
# opt-level = 3

# [profile.test.package."embedded-graphics-simulator"]
# opt-level = 3
