[package]
name = "metrics-probe"
description = "Local-first Layer-1 framework-metrics snapshot/diff tool for rsact (WS0.3)"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

# Host-only tooling: measures framework metrics (reactive node counts, heap,
# allocs/frame, layout counters) on the host with an instrumented allocator,
# stores per-commit JSON snapshots keyed by `git rev-parse HEAD`, diffs two
# snapshots, and regenerates a self-contained static HTML viewer.
#
# `std` + `embedded-graphics` on rsact-ui provide the reactive-storage backend
# and a font provider (needed to build/measure real widget pages headlessly via
# NullRenderer). `layout-counters` feeds the layout metrics (WS0.5) into the
# snapshot when built with it.
[dependencies]
# `test-utils` for `with_new_runtime`: metrics-probe builds a fresh isolated
# runtime per scenario in its (non-test) record path. This is host-only tooling
# (`publish = false`, workspace-excluded from thumb builds), so pulling the
# dev-only helper as a normal feature here is fine — it never reaches a
# shippable crate (WS1.2).
rsact-reactive = { workspace = true, features = ["std", "test-utils"] }
rsact-ui = { workspace = true, features = ["std", "embedded-graphics"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Reads .text/.rodata/.bss from the linked thumb size-probe ELFs (Layer 2).
object = "0.36"

[features]
# Include WS0.5 layout visit/measure counters in the snapshot. Opt-in because it
# turns on rsact-ui's `layout-counters` instrumentation.
layout-counters = ["rsact-ui/layout-counters"]

[lints]
workspace = true
