[dependencies]
rsact-icons = {workspace = true, features = ["all-sizes", "system"]}
rsact-ui = {workspace = true}

[package]
edition.workspace = true
name = "rsact-encoder"
version.workspace = true

[dev-dependencies]
embedded-graphics-simulator = {workspace = true}

[features]
default = []

simulator = ["rsact-ui/simulator"]
single-thread = ["rsact-ui/single-thread"]
std = ["rsact-ui/std"]

[lints]
workspace = true
