[package]
name = "rsact-icons"
edition.workspace = true
version.workspace = true

build = "./build/main.rs"

[dependencies]
embedded-graphics = "0.8.1"

[build-dependencies]
resvg = "0.44.0"
syn = "2.0.79"
usvg = "0.44.0"
bitvec = "1.0.1"
convert_case = "0.6.0"
prettyplease = "0.2.22"
proc-macro2 = "1.0.87"
quote = "1.0.37"

[features]
6px = []
7px = []
8px = []
9px = []
10px = []
11px = []
12px = []
13px = []
14px = []
15px = []
16px = []
17px = []
18px = []
19px = []
20px = []
21px = []
22px = []
23px = []
24px = []
