
[dependencies]
embedded-graphics = {workspace = true}

[build-dependencies]
bitvec = "1.0.1"
convert_case = "0.8.0"
prettyplease = "0.2.22"
proc-macro2 = "1.0.87"
quote = "1.0.37"
resvg = "0.45.0"
syn = "2.0.79"
usvg = "0.45.0"

[package]
edition.workspace = true
name = "rsact-icons"
version.workspace = true

build = "./build/main.rs"
exclude = ["./icon-libs"]

[features]
# TODO: Default to common when IconKind implemented
default = ["common", "all-sizes"]

# Icon sizes
10px = []
11px = []
12px = []
13px = []
14px = []
15px = []
16px = []
17px = []
18px = []
19px = []
20px = []
21px = []
22px = []
23px = []
24px = []
5px = []
6px = []
7px = []
8px = []
9px = []

all-sizes = [
  "5px",
  "6px",
  "7px",
  "8px",
  "9px",
  "10px",
  "11px",
  "12px",
  "13px",
  "14px",
  "15px",
  "16px",
  "17px",
  "18px",
  "19px",
  "20px",
  "21px",
  "22px",
  "23px",
  "24px",
]

# Icon Sets
common = ["system"]
extended = ["common"]
system = []

[lints]
workspace = true
