[dependencies]
log = { workspace = true }
once_cell = { workspace = true }
replace_with = { workspace = true }
rsact-macros = { workspace = true }
slotmap = { workspace = true }
tinyvec.workspace = true
ahash = { version = "0.8.12", default-features = false, features = [
    "compile-time-rng",
] }

[dev-dependencies]
criterion = "0.8.2"
cap = { workspace = true }
env_logger = { workspace = true }

[package]
edition.workspace = true
name = "rsact-reactive"
version.workspace = true

[features]
default = ["default-runtime"]
default-runtime = []
single-thread = []
std = []
debug-info = []
async = []

[[bench]]
harness = false
name = "reactivity"

[lints]
workspace = true

[lib]
bench = false
