[dependencies]
log = { workspace = true }
replace_with = { workspace = true }
rsact-macros = { workspace = true }
slotmap = { workspace = true }
tinyvec.workspace = true
# Only pulled by the (default no_std) `single-thread` backend, which guards all
# runtime access with `critical_section::with`. The `unsafe-single-thread`
# backend does NOT enable it, so no critical-section impl is required there.
critical-section = { version = "1.2", optional = true }

[dev-dependencies]
criterion = "0.8.2"
cap = { workspace = true }
env_logger = { workspace = true }
# Turn on `test-utils` for this crate's *own* dev targets (unit tests,
# doctests, benches, examples). A package may depend on itself as a
# dev-dependency purely to enable a feature for those targets; production
# builds and downstream normal dependents never see it (resolver 3 keeps
# dev-dependency features out of normal builds). See the `test-utils` feature.
rsact-reactive = { path = ".", features = ["test-utils"] }

[package]
edition.workspace = true
name = "rsact-reactive"
version.workspace = true

[features]
default = ["default-runtime"]
default-runtime = []
std = []
# no_std reactive storage. Exactly one of std / single-thread /
# unsafe-single-thread must be enabled.
#   single-thread        — sound: every runtime access is wrapped in
#                          `critical_section::with` (interrupts off on single
#                          core, spinlock on multicore). Needs a critical-section
#                          impl from the target (cortex-m, critical-section/std…).
#   unsafe-single-thread — fast: bare `unsafe impl Sync` global, no
#                          critical-section. SOUND ONLY if the runtime is touched
#                          from exactly one execution context (no ISRs, one core).
single-thread = ["dep:critical-section"]
# TODO: Rename to "unsafe-assume-single-thread"?
unsafe-single-thread = []
debug-info = []
async = []
# Dev-only multi-runtime helpers (`create_runtime`/`with_new_runtime`). These
# create/destroy extra thread-local runtimes and are unsound in production (the
# single global runtime is the only public reality). Gated so they never exist
# in a production build graph; dependents enable them via dev-dependencies only
# (WS1.2 decision).
test-utils = []

[[bench]]
harness = false
name = "reactivity"

[[bench]]
harness = false
name = "allocations"

[lints]
workspace = true

[lib]
bench = false
