[package]
name = "rsact-render"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
embedded-graphics = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true, features = ["no-std-float"] }
num = { workspace = true }
rsact-reactive = { workspace = true }
defmt = { workspace = true, optional = true }
embedded-text = { workspace = true, optional = true }
embedded-graphics-simulator = { workspace = true, optional = true }
slotmap = { workspace = true }

[features]
tiny-skia = ["dep:tiny-skia"]
embedded-graphics = ["dep:embedded-graphics", "dep:embedded-text"]
defmt = ["dep:defmt"]

[lints]
workspace = true
