[package]
name = "rsact-render"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
embedded-graphics = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true, features = ["no-std-float"] }
num = { workspace = true }
log = { workspace = true }
rsact-reactive = { workspace = true }
defmt = { workspace = true, optional = true }
embedded-text = { workspace = true, optional = true }
embedded-graphics-simulator = { workspace = true, optional = true }
slotmap = { workspace = true }

[features]
# `std` forwards a reactive backend so the crate (and its tests) build on their
# own for host testing — rsact-reactive requires a backend feature, otherwise
# only feature-unification from a downstream crate provides one. (A no_std
# `single-thread` passthrough is intentionally omitted: the eg primitives still
# use std-only f32 math (ceil/powi), a separate no_std-math task; on device the
# backend arrives via unification from rsact-ui.)
std = ["rsact-reactive/std", "log/std"]
tiny-skia = ["dep:tiny-skia"]
embedded-graphics = ["dep:embedded-graphics", "dep:embedded-text"]
defmt = ["dep:defmt"]

[lints]
workspace = true
