[package]
name = "rsact-ui"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bitflags = { workspace = true }
defmt = { workspace = true, optional = true }
derivative = { workspace = true }
embedded-graphics = { workspace = true, optional = true }
embedded-graphics-core = { workspace = true, optional = true }
embedded-graphics-simulator = { workspace = true, optional = true }
embedded-text = { workspace = true, optional = true }
embedded-time = { workspace = true }
itertools = { version = "0.14.0", default-features = false }
log = { workspace = true }
num = { workspace = true }
rsact-tiny-icons = { workspace = true, features = [
    "common",
    "all-sizes",
], optional = true }
rsact-macros = { workspace = true }
rsact-reactive = { workspace = true }
rsact-render = { workspace = true }
tinyvec = { workspace = true }
u8g2-fonts = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true }
slotmap = { workspace = true }

[dev-dependencies]
embedded-graphics = { workspace = true }
embedded-graphics-core = { workspace = true }
cap = { workspace = true }
fake = "4.0.0"
rand = "0.9"
paw = { path = "../../paw" }
env_logger = { workspace = true }
embedded-graphics-simulator = { workspace = true }

[features]
default = []

debug-info = ["rsact-reactive/debug-info"]
defmt = ["dep:defmt"]
simulator = ["dep:embedded-graphics-simulator", "embedded-graphics"]
embedded-graphics = [
    "dep:embedded-graphics",
    "dep:embedded-graphics-core",
    "dep:embedded-text",
    "rsact-render/embedded-graphics",
]
tiny-icons = ["dep:rsact-tiny-icons"]
u8g2-fonts = ["dep:u8g2-fonts", "embedded-graphics"]
single-thread = ["rsact-reactive/single-thread"]
std = ["log/std", "rsact-reactive/std", "tiny-skia/png-format"]
# TODO: Print pretty blocks in terminal showing layout problems: overflows, insufficient sizes, etc.
layout-diagnostics = []
tiny-skia = ["dep:tiny-skia", "rsact-render/tiny-skia"]

[[example]]
name = "animation"
required-features = ["std", "simulator", "embedded-graphics"]

[[example]]
name = "flex"
required-features = ["std", "simulator", "embedded-graphics"]

[[example]]
name = "primitives_aa"
required-features = ["std", "simulator", "embedded-graphics"]

[[example]]
name = "3d_printer"
required-features = ["std", "simulator", "embedded-graphics", "tiny-icons"]

[[example]]
name = "mem_usage_display_240_240"
required-features = ["std", "simulator", "embedded-graphics", "tiny-icons"]

[[example]]
name = "tiny_skia"
required-features = ["std", "simulator", "tiny-skia"]

[[example]]
name = "icons"
required-features = ["std", "simulator", "embedded-graphics", "tiny-icons"]

[lints]
workspace = true
