[package]
name = "rsact-ui"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bitflags = { workspace = true }
defmt = { workspace = true, optional = true }
derivative = { workspace = true }
embedded-graphics = { workspace = true, optional = true }
embedded-graphics-core = { workspace = true, optional = true }
embedded-graphics-simulator = { workspace = true, optional = true }
embedded-text = { workspace = true, optional = true }
embedded-time = { workspace = true }
itertools = { version = "0.14.0", default-features = false }
log = { workspace = true }
num = { workspace = true }
portable-atomic = { workspace = true }
rsact-tiny-icons = { workspace = true, features = [
    "common",
    "all-sizes",
], optional = true }
rsact-macros = { workspace = true }
rsact-reactive = { workspace = true }
# The workspace dep sets default-features = false (rsact-ui must not force
# rsact-render's `libm` default, or enabling `micromath` in a graph with rsact-ui
# trips the libm/micromath `compile_error!`). The math backend is chosen through
# rsact-ui's own `libm` (default) / `micromath` passthrough features below.
rsact-render = { workspace = true }
tinyvec = { workspace = true }
u8g2-fonts = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true }
slotmap = { workspace = true }

[dev-dependencies]
embedded-graphics = { workspace = true }
embedded-graphics-core = { workspace = true }
cap = { workspace = true }
criterion = "0.8"
fake = "4.0.0"
rand = "0.9"
env_logger = { workspace = true }
embedded-graphics-simulator = { workspace = true }

# WS0.5 layout timing benches. `required-features` keeps `cargo test`/`cargo
# build` from trying to compile it without a render backend; run with:
#   cargo bench -p rsact-ui --features "std,embedded-graphics" --bench layout
[[bench]]
name = "layout"
harness = false
required-features = ["std", "embedded-graphics"]

[features]
default = ["libm"]

# no_std f32 math backend, forwarded to rsact-render (mutually exclusive there).
# `libm` is the default; opt into `micromath` with `--no-default-features`.
libm = ["rsact-render/libm"]
micromath = ["rsact-render/micromath"]

debug-info = ["rsact-reactive/debug-info"]
defmt = [
    "dep:defmt",
    "embedded-graphics?/defmt",
    "embedded-graphics-core?/defmt",
]
simulator = ["dep:embedded-graphics-simulator", "embedded-graphics"]
embedded-graphics = [
    "dep:embedded-graphics",
    "dep:embedded-graphics-core",
    "dep:embedded-text",
    "rsact-render/embedded-graphics",
]
tiny-icons = ["dep:rsact-tiny-icons"]
u8g2-fonts = ["dep:u8g2-fonts", "embedded-graphics"]
single-thread = ["rsact-reactive/single-thread"]
# no_std, single-execution-context only (no critical-section). See
# rsact-reactive's `unsafe-single-thread`. NOTE: a full no_std rsact-ui build is
# still blocked by the eg primitives' std-only f32 math — a separate task.
unsafe-single-thread = ["rsact-reactive/unsafe-single-thread"]
# `tiny-skia?/png-format` (note the `?`): png encoding only when tiny-skia is
# already enabled — without the `?` this force-pulled the optional tiny-skia
# into every std build (the WS0.6 leak).
std = ["log/std", "rsact-reactive/std", "tiny-skia?/png-format"]
# Layout-pass work counters (WS0.5): visit/measure counts feeding the metrics
# snapshot + a baseline-locking test. Host/dev-only, no runtime cost when off.
layout-counters = []
# TODO: Print pretty blocks in terminal showing layout problems: overflows, insufficient sizes, etc.
layout-diagnostics = []
tiny-skia = ["dep:tiny-skia", "rsact-render/tiny-skia"]

[[example]]
name = "animation"
required-features = ["std", "simulator", "embedded-graphics"]

[[example]]
name = "flex"
required-features = ["std", "simulator", "embedded-graphics"]

[[example]]
name = "primitives_aa"
required-features = ["std", "simulator", "embedded-graphics"]

[[example]]
name = "3d_printer"
required-features = ["std", "simulator", "embedded-graphics", "tiny-icons"]

[[example]]
name = "mem_usage_display_240_240"
required-features = ["std", "simulator", "embedded-graphics", "tiny-icons"]

[[example]]
name = "tiny_skia"
required-features = ["std", "simulator", "tiny-skia"]

[[example]]
name = "icons"
required-features = ["std", "simulator", "embedded-graphics", "tiny-icons"]

[lints]
workspace = true
