[package]
name = "rsact-ui"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bitflags = { workspace = true }
defmt = { workspace = true, optional = true }
derivative = { workspace = true }
embedded-graphics = { workspace = true, optional = true }
embedded-graphics-core = { workspace = true, optional = true }
embedded-graphics-simulator = { workspace = true, optional = true }
embedded-text = { workspace = true, optional = true }
embedded-time = { workspace = true }
itertools = { version = "0.14.0", default-features = false }
log = { workspace = true }
num = { workspace = true }
portable-atomic = { workspace = true }
# 9a.2: the workspace dep sets `default-features = false` (dropping
# rsact-tiny-icons's default `all-sizes`), so we keep only the `common` set here
# and select icon sizes à la carte via the `Npx` passthrough features below
# (or `icons-all-sizes`). This ends the ~46 KiB all-tables pin every app paid.
rsact-tiny-icons = { workspace = true, features = [
    "common",
], optional = true }
rsact-macros = { workspace = true }
rsact-reactive = { workspace = true }
# The workspace dep sets default-features = false (rsact-ui must not force
# rsact-render's `libm` default, or enabling `micromath` in a graph with rsact-ui
# trips the libm/micromath `compile_error!`). The math backend is chosen through
# rsact-ui's own `libm` (default) / `micromath` passthrough features below.
rsact-render = { workspace = true }
tinyvec = { workspace = true }
u8g2-fonts = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true }
slotmap = { workspace = true }

[dev-dependencies]
embedded-graphics = { workspace = true }
embedded-graphics-core = { workspace = true }
cap = { workspace = true }
criterion = "0.8"
fake = "4.0.0"
rand = "0.9"
env_logger = { workspace = true }
embedded-graphics-simulator = { workspace = true }
# Tests/benches use `with_new_runtime`, gated behind rsact-reactive's dev-only
# `test-utils` feature. Enabled here for dev targets only (resolver 3 keeps it
# out of the normal rsact-ui build graph) — WS1.2.
rsact-reactive = { workspace = true, features = ["test-utils"] }

# WS0.5 layout timing benches. `required-features` keeps `cargo test`/`cargo
# build` from trying to compile it without a render backend; run with:
#   cargo bench -p rsact-ui --features "std,embedded-graphics" --bench layout
[[bench]]
name = "layout"
harness = false
required-features = ["std", "embedded-graphics"]

[features]
default = ["libm"]

# no_std f32 math backend, forwarded to rsact-render (mutually exclusive there).
# `libm` is the default; opt into `micromath` with `--no-default-features`.
libm = ["rsact-render/libm"]
micromath = ["rsact-render/micromath"]

debug-info = ["rsact-reactive/debug-info"]
defmt = [
    "dep:defmt",
    "rsact-render/defmt",
    "embedded-graphics?/defmt",
    "embedded-graphics-core?/defmt",
]
simulator = ["dep:embedded-graphics-simulator", "embedded-graphics"]
embedded-graphics = [
    "dep:embedded-graphics",
    "dep:embedded-graphics-core",
    "dep:embedded-text",
    "rsact-render/embedded-graphics",
]
tiny-icons = ["dep:rsact-tiny-icons"]
# Per-size icon passthrough (9a.2). rsact-ui no longer force-enables `all-sizes`
# on rsact-tiny-icons, so an app compiles only the icon sizes it renders, e.g.
# `features = ["tiny-icons", "16px"]`. The weak `?` keeps these no-ops unless
# `tiny-icons` is on (naming a size never drags in the icon dep on its own).
# `icons-all-sizes` restores the previous all-tables behavior.
5px = ["rsact-tiny-icons?/5px"]
6px = ["rsact-tiny-icons?/6px"]
7px = ["rsact-tiny-icons?/7px"]
8px = ["rsact-tiny-icons?/8px"]
9px = ["rsact-tiny-icons?/9px"]
10px = ["rsact-tiny-icons?/10px"]
11px = ["rsact-tiny-icons?/11px"]
12px = ["rsact-tiny-icons?/12px"]
13px = ["rsact-tiny-icons?/13px"]
14px = ["rsact-tiny-icons?/14px"]
15px = ["rsact-tiny-icons?/15px"]
16px = ["rsact-tiny-icons?/16px"]
17px = ["rsact-tiny-icons?/17px"]
18px = ["rsact-tiny-icons?/18px"]
19px = ["rsact-tiny-icons?/19px"]
20px = ["rsact-tiny-icons?/20px"]
21px = ["rsact-tiny-icons?/21px"]
22px = ["rsact-tiny-icons?/22px"]
23px = ["rsact-tiny-icons?/23px"]
24px = ["rsact-tiny-icons?/24px"]
icons-all-sizes = ["rsact-tiny-icons?/all-sizes"]
u8g2-fonts = ["dep:u8g2-fonts", "embedded-graphics"]
single-thread = ["rsact-reactive/single-thread"]
# no_std, single-execution-context only (no critical-section). See
# rsact-reactive's `unsafe-single-thread`. no_std rsact-ui builds for thumb
# targets (WS0.1 gave the eg primitives a `FloatExt` math backend — pick `libm`
# or `micromath`; WS0.2 made the font-id counter thumbv6m-safe).
unsafe-single-thread = ["rsact-reactive/unsafe-single-thread"]
# `tiny-skia?/png-format` (note the `?`): png encoding only when tiny-skia is
# already enabled — without the `?` this force-pulled the optional tiny-skia
# into every std build (the WS0.6 leak).
std = ["log/std", "rsact-reactive/std", "tiny-skia?/png-format"]
# Layout-pass work counters (WS0.5): visit/measure counts feeding the metrics
# snapshot + a baseline-locking test. Host/dev-only, no runtime cost when off.
layout-counters = []
# TODO: Print pretty blocks in terminal showing layout problems: overflows, insufficient sizes, etc.
layout-diagnostics = []
tiny-skia = ["dep:tiny-skia", "rsact-render/tiny-skia"]

[[example]]
name = "animation"
required-features = ["std", "simulator", "embedded-graphics"]

[[example]]
name = "flex"
required-features = ["std", "simulator", "embedded-graphics"]

[[example]]
name = "primitives_aa"
required-features = ["std", "simulator", "embedded-graphics"]

[[example]]
name = "3d_printer"
required-features = ["std", "simulator", "embedded-graphics", "tiny-icons", "icons-all-sizes"]

[[example]]
name = "mem_usage_display_240_240"
required-features = ["std", "simulator", "embedded-graphics", "tiny-icons", "icons-all-sizes"]

[[example]]
name = "tiny_skia"
required-features = ["std", "simulator", "tiny-skia"]

[[example]]
name = "icons"
required-features = ["std", "simulator", "embedded-graphics", "tiny-icons", "icons-all-sizes"]

[lints]
workspace = true
